# MCassistant

./: README.md  pyproject.toml
src/mc_assistant/: __init__.py  assistant.py  cli.py  command_runtime.py  config.py  game_state.py  main.py  minecraft_adapter.py  models.py  seed_analysis.py  session.py  world_locator.py
src/mc_assistant/adapters/: __init__.py  game_command.py  live_minecraft.py
src/mc_assistant/planning/: __init__.py  engine.py
src/mc_assistant/schematics/: __init__.py  loader.py
src/mc_assistant/telemetry/: __init__.py  logging.py
src/mc_assistant/voice/: __init__.py  command_handler.py  dialogue.py  input.py  intents.py  interfaces.py  output.py  stt_speechrecognition.py  tts_pyttsx3.py
src/mc_assistant/world/: __init__.py  intelligence.py
tests/: test_cli_entrypoint.py  test_command_runtime.py  test_live_adapter.py  test_seed_and_locator.py  test_session.py  test_voice_chat_cli.py  test_voice_input.py  test_voice_intents.py
