[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-assistant"
version = "0.1.0"
description = "Foundational scaffold for a Minecraft assistant service."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "MC Assistant Team" }
]
dependencies = [
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "typer>=0.12,<1.0",
  "rich>=13.7,<14.0",
  "structlog>=24.1,<25.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0"
]

[project.scripts]
mc-assistant = "mc_assistant.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
