[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-assistant"
version = "0.1.0"
description = "Voice-capable Minecraft assistant with command automation and seed intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "rich>=13.7.1",
]

[project.optional-dependencies]
voice = [
  "SpeechRecognition>=3.10.4",
  "pyttsx3>=2.90",
]
minescript = [
  "minescript",
]

[project.scripts]
mc-assistant = "mc_assistant.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
